Fix z-index and static/relative issue with the responsive nav

--- a/app/assets/stylesheets/_globalnav/_core/_media.sass
+++ b/app/assets/stylesheets/_globalnav/_core/_media.sass
@@ -9,7 +9,7 @@
   position: absolute
   top: 0
   left: 20px
-  z-index: 2
+  z-index: 3
   .homepage &
     background-color: #1d508d
     padding: 10px 15px
@@ -26,7 +26,7 @@
   margin: 7px 10px 0 0
   width: 83px
   vertical-align: top
-  z-index: 2
+  z-index: 3
   .ie7 &
     float: left
 
